[package]
name = "baffle-project"
version = "0.1.0"
authors = ["Kostis Karantias <kkarantias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baffle = { path = "/Users/gtklocker/baffle" }
web3 = { git = "https://github.com/tomusdrw/rust-web3" }